<resources>
    <string name="app_name">Nirvana</string>
    <string name="music">Music</string>
    <string name="biography">Biography</string>
    <string name="musics">Musics</string>
    <string name="todo">TODO</string>
    <string name="smells_like_teen_spirit">Smells like teen spirit</string>
    <string name="nirvana">Nirvana</string>
    <string name="heart_shaped">Heart-shaped</string>
    <string name="lithium">Lithium</string>
    <string name="dumb">Dumb</string>
    <string name="come_as_you_are">Come As You Are</string>
    <string name="nirvana_biography">زندگینامه کرت کوبین</string>
    <string name="biography_text">زندگی Kurt Cobain : کرت کوبین در تاریخ ۲۰ فوریه سال ۱۹۶۷ به دنیا آمد. او در شهر کوچکی به نام Aberdeen در ایالت واشنگتن متولد شد و از همان کودکی، علاقه بسیار زیادی به موسیقی داشت. با این که او یک خواهر کوچک تر به نام کیم داشت، اما پس از جدا شدن پدر و مادر کرت، آنها دور از یک دیگر بزرگ شدند. هنگامی که او تنها ۹ سال داشت، به خانه پدر خود رفت تا با او زندگی کند. پدر کرت بلافاصله پس از جدا شدن از مادر او، با شخص دیگری ازدواج کرد و همین موضوع باعث شد تا رابطه آنها خدشه دار شود. دهه ۸۰ میلادی : در اوایل دهه ۸۰ میلادی، او به خانه مادر خود بازگشت و با او به ادامه زندگی پرداخت. در این هنگام کرت یک پسر بچه دبیرستانی بود و شوق هنری خود را با نقاشی کردن نشان می‌داد. پس از مدتی، کرت با سبک موسیقی Punk Rock آشنا شد و این آشنایی، بذری بود که در او کاشته شد و زندگی او را برای همیشه تغییر داد. او با یک گروه پانک محلی به نام Melvis آشنا شد و پس از مدتی، با یکی از اعضای این گروه به نام Buzz Osbourne دوست شد. این دوستی باعث شد تا کرت با گروه‌های پانک بیشتری آشنا شود. اما این آشنایی و علاقه جدید در او باعث نشد تا او دیگر به سراغ مصرف مواد مخدر نرود. در سال‌های دبیرستان، او نه تنها به مصرف مواد و پرخاشگری مشهور بود، بلکه با ناپدری جدید خود نیز به مشکل برخورده بود. دستگیری کرت : زندگی کرت در سال‌‌‍‌های ۱۹۸۴ و ۱۹۸۵، یک زندگی نه چندان جالب بود. او تمامی این دو سال را در خانه دوستان خود و یا ساختمان های عمومی می خوابید تا از مشکلات خانوادگی خود به دور باشد. در ماه جولای سال ۱۹۸۵ پلیس او را به جرم آسیب رساندن به اموال عمومی دستگیر کرد و مجازات‌های مختلفی برای او در نظر گرفته شد. چندین ماه بعد، کوبین اولین گروه موسیقی خود را با نام Fecal Matter ساخت. این گروه تنها چند دمو را ضبط کرد اما هیچ اثری از آنها منتشر نشد. پس از آن، کوبین با نوازنده‌های بیشتری آشنا شد که از میان آنها می‌توانیم به بیسیستی به نام Krist Novoselic و درامری به نام Aaron Burckhard اشاره کنیم. کوبین به عنوان نوازنده گیتار به آنها پیوست و اولین اجرای این افراد در یک مهمانی خانگی در سال ۱۹۸۷ بود. در همین زمان بود که کرت با دختری به نام Tracy Marander آشنا شد و رابطه آنها شکل گرفت. با این که هر دو نفر با مشکلات مالی دست و پنجه نرم می‌کردند، اما این زوج زندگی شادی را کنار یکدیگر در ایالت Olympia داشتند. گروه موسیقی Nirvana : در سال ۱۹۸۸، کوبین به شکل جدی به ساخت موسیقی فکر می‌کرد و می‌خواست تا تمامی زمان خود در روز را به ساخت آهنگ‌های مختلف بپردازد. گروه موسیقی او نام نیروانا را پذیرفت و اولین آهنگ این گروه به نام Love Buzz توسط یک لیبل کوچک منتشر شد. در همین زمان، Chad Channing جای Burckhard را به عنوان نوازنده درامز گرفت و گروه می‌خواست تا در ایالت سیاتل به اجرا بپردازد. سال ۱۹۸۹، گروه اولین آلبوم خود به نام Bleach را منتشر کرد که این آلبوم، ریشه‌هایی از سبک‌‌های پانک و هویمتال داشت. در سال ۱۹۹۰، گروه به همراه گروه Sonic Youth به تور رفت و Dave Grohl به عنوان نوازنده درامز معرفی شد. در سال ۱۹۹۱، نیروانا با یک لیبل بزرگ به نام Geffen Records قرارداد جدیدی را امضا کرد و دومین آلبوم گروه به نام Nevermind توسط آنها عرضه شد. این آلبوم باعث شد تا بسیاری از افراد سبک نیروانا را Grunge بنامند. مشهورترین تک آهنگ این گروه به نام Smells Like Teen Spirit نیز در این آلبوم قرار داشت که باعث شد تا این آلبوم به صدر جدول تاپ چارت برسد. از طرفی، بسیاری از افراد کرت کوبین را به عنوان یکی از بهترین آهنگسازان آن دوره می‌دانستند. پس از انتشار آلبوم Nevermind، کوبین احساس خوبی به آینده خود نداشت و حس می‌کرد کنترلی بر روی آینده خود ندارد. این اضطراب باعث شد تا او برای کم کردن این استرس شروع به مصرف هروئین کند. او قبل از انتشار آلبوم دوم گروه خود، با Courtney Love آشنا شد، دختری که در گروهی به نام Hole فعالیت داشت. آنها در فوریه سال ۱۹۹۲ ازدواج کردند و در ماه آگوست همان سال صاحب یک دختر شدند. اخرین سال های درخشش کرت کوبین: در سال ۱۹۹۳، نیروانا آلبوم جدید خود را به نام In Utero منتشر کرد که به سرعت به صدر جدول تاپ چارت رسید. نیروانا برای این آلبوم یک تور در اروپا تدارک دید و در میان اجراها، کوبین برای وقت گذراندن با دختر و همسر خود، وقت زیادی را خالی می‌کرد. اما در یک هتل در شهر رم، او به دلیل مصرف زیاد مواد اوردوز کرد و به کما رفت. پس از آنکه او به آمریکا بازگشت، وضعیت روحی او بدتر شد و مصرف مواد توسط او نیز افزایش یافت. در سال ۱۹۹۴، همسر او تلاش کرد تا با فرستادن کوبین به یک کمپ ترک اعتیاد باعث شود تا او مصرف مواد را کنار بگذارد. کوبیت پس از چند روز ماندن این کمپ را ترک کرد. در روز ۵ آوریل سال ۱۹۹۴، کرت کوبین ۲۷ ساله خودکشی کرد. او با گذاشتن یک شات گان در دهان خود و شلیک آن، برای همیشه به زندگی خود پایان داد. او در نامه ای که پیش از مرگ خود نوشته بود، از تمامی طرفداران خود، همسر و دختر خود تشکر کرد. با این که دلیل مرگ کرت کوبین خودکشی اعلام شده است، اما بسیاری از طرفداران او بر این عقیده هستند که Courtney Love، همسر او ممکن است در مرگ او نقش داشته باشد. پس از گذشت دهه‌ها از مرگ کرت کوبین، بسیاری از افراد هنوز آهنگ‌های او را گوش می کنند و از آن لذت می‌برند و بسیاری دیگر نیز از آهنگ‌های او در آهنگسازی‌های خود الهام می‌گیرند.</string>
</resources>