<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_background"
    android:orientation="vertical"
    tools:context=".Music_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A1A1A"
        android:elevation="8dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:id="@+id/back_main"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:src="?attr/actionModeCloseDrawable"
                app:tint="@color/white"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="sans-serif-black"
                android:text="@string/musics"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </FrameLayout>

    </LinearLayout>


    <!-- write your code here. you can do whatever you want, but start from here. you can give it linear layout and other layouts. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/smells"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginTop="40sp"
            android:text="@string/smells_like_teen_spirit"
            android:textColor="#B9BCC2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginTop="80sp"
            android:text="@string/nirvana"
            android:textColor="#B9BCC2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/smells_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/hearted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100sp"
            android:layout_marginTop="170dp"
            android:text="@string/heart_shaped"
            android:textColor="#B9BCC2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="210dp"
            android:text="@string/nirvana"
            android:textColor="#B9BCC2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/hearted_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="160dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/lithium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100sp"
            android:layout_marginTop="290dp"
            android:text="@string/lithium"
            android:textColor="#B9BCC2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="330dp"
            android:text="@string/nirvana"
            android:textColor="#B9BCC2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/smells_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="285dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/dumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100sp"
            android:layout_marginTop="410dp"
            android:text="@string/dumb"
            android:textColor="#B9BCC2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="440dp"
            android:text="@string/nirvana"
            android:textColor="#B9BCC2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/hearted_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="400dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/come"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100sp"
            android:layout_marginTop="510dp"
            android:text="@string/come_as_you_are"
            android:textColor="#B9BCC2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="550dp"
            android:text="@string/nirvana"
            android:textColor="#B9BCC2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/come_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="510dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />











    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>